fix spacing in logo header

--- a/src/desktop/components/inquiry_questionnaire/stylesheets/desktop.styl
+++ b/src/desktop/components/inquiry_questionnaire/stylesheets/desktop.styl
@@ -19,8 +19,8 @@
   &--centered
     text-align center
   #auth-header-logo
-    font-size 45px
-    margin-top 10px
+    font-size 39px
+    margin 10px auto 15px
   > span
     display table-cell
     vertical-align bottom
